--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,6 +1,6 @@
 <% 
   let page_search = '';
-  if(search){
+  if (search) {
     page_search = `search=${search}&`;
   }
 %>
@@ -53,7 +53,7 @@
     </thead>
     <tbody class="table-group-divider">
       <% data.forEach(item => { %>
-        <tr class="<%= item.user_id==authStatus.user_id?'table-info':''%>">
+        <tr class="<%= item.user_id==authStatus.userId?'table-info':''%>">
           <td>
             <a style="display:block; color:black; text-decoration-line: none; width:100%;" href="/boards/<%= item.id %>">
               <%= item.subject %>
