--- a/views/view.ejs
+++ b/views/view.ejs
@@ -18,10 +18,19 @@
   .dropdown {
     float: right;
   }
+  .comments_total {
+    color: rgb(103, 103, 103);
+    font-size: 20px;
+    font-weight: bold;
+    border-top: 2px solid #ccc;
+    border-bottom: 2px solid #ccc;
+    padding: 8px 0px 8px 0px;
+    margin-bottom: 25px;
+  }
 </style>
 <h3 style="background-color:white; padding:15px; width:100%; margin-bottom:10px; font-weight:bold;"><%= data[0].subject %></h3>
-<div style="padding:10px; height:50px;">
-  <b>작성자:</b> <%= data[0].username %> | <b>작성일자:</b> <%= data[0].created_at.toISOString().replace('T', ' ').substring(0, 19) %>
+<div style="padding:10px; min-height:50px;">
+  <b>작성자:</b> <%= data[0].username %> | <b>작성일자:</b> <%= data[0].created_at.toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22); %>
   <%- data[0].updated_at ? '<b>(수정됨)</b>':'' %>
   <% if (data[0].upload && data[0].upload.length > 0) { %>
   <div class="dropdown">
@@ -31,7 +40,10 @@
     <ul class="dropdown-menu">
       <% let uploads = data[0].upload; %>
       <% uploads.forEach(item => { %>
-        <li><a class="dropdown-item" href="<%= `/downloads/${item}` %>"><%= item %></a></li>
+        <li><a class="dropdown-item" href="<%= `/downloads/${item}` %>" style="max-width: 600px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+          <%= item %>
+        </a>
+        </li>
       <% }) %>
     </ul>
   </div>
@@ -51,12 +63,16 @@
 </div>
 <% } %>
 <br><br>
+<div class="comments_total">
+  <i class="fa fa-commenting-o" aria-hidden="true"></i> 
+  댓글 <span class="total"><%= comment?.[0]?.total || 0 %></span>개
+</div>
 <div class="comments" style="margin-bottom:30px;">
 <% comment.forEach(item => { %>
   <div class="comment" id="<%= item.id %>" style="margin-top:10px;">
     <div class="info" style="margin-top:10px;">
       <span user_id="<%= item.user_id %>" style="padding-right:10px;"><b><%= item.username %></b></span>|
-      <span style="padding:0 10px 0 10px;"><%= item.created_at.toISOString().replace('T', ' ').substring(0, 19)  %></span>
+      <span style="padding:0 10px 0 10px;"><%= item.created_at.toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22);  %></span>
       <% if (authStatus.username==item.username) {%>
       <button type="button" class="btn btn-info editComment" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">수정</button>
       <% } %>
@@ -93,7 +109,7 @@
               method: 'DELETE',
               data: {
                 id: '<%=id%>',
-                file: deleteFile
+                files: deleteFile
               },
               success: function(response) {
                 console.log('파일 삭제 성공:', response);
@@ -167,7 +183,7 @@
         <div class="comment" id="${response.comment.id}" style="margin-top:10px;">
           <div class="info" style="margin-top:10px;">
             <span user_id="${response.comment.user_id}" style="padding-right:10px;"><b>${response.comment.username}</b></span>|
-            <span style="padding:0 10px 0 10px;">${new Date(response.comment.created_at).toISOString().replace('T', ' ').substring(0, 19)}</span>
+            <span style="padding:0 10px 0 10px;">${new Date(response.comment.created_at).toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22)}</span>
             <button type="button" class="btn btn-info editComment" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">수정</button>
             <button type="button" class="btn btn-danger deleteComment" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">삭제</button>
           </div>
@@ -177,6 +193,7 @@
         $(".comments").append(newComment);
         $(".writeComment .content").val("");
         $(".writeComment .content").height(35);
+        $(".comments_total > span").text( parseInt($(".comments_total > span").text()) + 1 );
       },
       error: function(xhr, status, error) {
         console.log(xhr, status, error);
@@ -233,6 +250,7 @@
         success: function(response) {
           console.log(response);
           commentElement.remove();  // 댓글 요소 삭제
+          $(".comments_total > span").text( parseInt($(".comments_total > span").text()) - 1 )
         },
         error: function(xhr, status, error) {
           console.log(xhr, status, error);
