--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,9 +1,9 @@
 <div class="info" style="width:100%; margin-bottom: 10px;">
   <button class="btn btn-primary">계정 생성</button>
 </div>
-<table class="table table-hover list" style="border: 1px solid #ccc;">
+<table class="table table-dark list" style="border: 1px solid #ccc;">
   <col style="width:10%;"><col style="width:30%;"><col><col style="width:15%;"><col style="width:15%;"><col style="width:5%;">
-  <thead>
+  <thead class="thead-dark">
     <tr>
       <th>NO.</th>
       <th>아이디</th>
@@ -15,6 +15,7 @@
   </thead>
   <tbody class="table-group-divider">
     <% data.forEach(item => { %>
+      <% if (authStatus.userId!==item.id) { %>
       <tr class="user" user_id="<%=item.id%>" style="cursor: pointer">
         <td data-bs-toggle="modal" data-bs-target="#exampleModal"><%=item.id%></td>
         <td data-bs-toggle="modal" data-bs-target="#exampleModal"><%=item.username%></td>
@@ -23,17 +24,16 @@
         <td data-bs-toggle="modal" data-bs-target="#exampleModal" style="text-align:center;">기본</td>
         <td style="text-align:center;">
           <div class="dropdown">
-            <button class="btn btn-dark btn-sm dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"></button>
+            <button class="btn btn-light btn-sm dropdown-toggle" id="dropdownMenuButton" data-bs-toggle="dropdown" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;"></button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <% if (authStatus.userId!==item.id) { %>
-                <li><a class="dropdown-item" href="#">이용 정지</a></li>
-                <li><a class="dropdown-item" href="#">관리 권한 부여</a></li>
-                <li class="delete"><a class="dropdown-item" href="#" style="color:red">계정 삭제</a></li>
-              <% } %>
+              <li><a class="dropdown-item" href="#">이용 정지</a></li>
+              <li><a class="dropdown-item" href="#">관리 권한 부여</a></li>
+              <li class="delete"><a class="dropdown-item" href="#" style="color:red">계정 삭제</a></li>
             </ul>
           </div>
         </td>
       </tr>
+      <% } %>
     <% });%>
   </tbody>
 </table>
