--- a/views/title.ejs
+++ b/views/title.ejs
@@ -10,71 +10,77 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>EX community</title>
   <style>
-  html { height: 100%; }
-  body { height: 100%; margin: 0; padding: 0; font-family: 'Roboto', sans-serif; }
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Roboto', sans-serif;
+  }
+
   .__body__ { 
-    padding: 140px 400px 40px 400px;
-    height:100%;
+    flex: 1;
+    padding: 100px 400px 40px 400px;
+    /* height:100%; */
     background-color:#f0f0f0;
     overflow: auto;
   }
   
   /* 작은 태블릿 및 모바일 (최대 768px) */
   @media (max-width: 768px) {
-      .__body__ {
-          padding: 80px 20px; /* 작은 화면에서 패딩 조정 */
-      }
+    .__body__ {
+      padding: 80px 20px; /* 작은 화면에서 패딩 조정 */
+    }
   }
 
   /* 중간 크기 태블릿 (768px ~ 1024px) */
   @media (min-width: 769px) and (max-width: 1024px) {
-      .__body__ {
-          padding: 100px 40px; /* 중간 크기 화면에서 패딩 변경 */
-      }
+    .__body__ {
+      padding: 100px 40px; /* 중간 크기 화면에서 패딩 변경 */
+    }
+  }
+
+  .footer {
+    background: #333;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+  }
+
+  .footer .copyright {
+    margin-top: 10px;
+    font-size: 14px;
+    opacity: 0.7;
+  }
+
+  @media (max-width: 600px) {
+    .footer {
+      padding: 15px 0;
+    }
   }
 
   .navbar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
   }
+
   .none {
-      display:none;
+    display:none;
   }
   </style>
 </head>
 <body>
   <div class="__header__">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/"><b>EX community</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-          <!-- <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Link
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Link</a>
-            </li>
-          </ul> -->
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <% if (authStatus) { %>
             <li class="nav-item dropdown">
@@ -101,6 +107,14 @@
   </div>
   <div class="__body__">
     <%- include(body) %>
+  </div>
+  <div class="__footer__">
+    <footer class="footer">
+      <p>회사명 | 주소: 전라남도 신안군 | 전화: 02-1234-5678</p>
+      <div class="copyright">
+          &copy; 2025 Company Name. All rights reserved.
+      </div>
+  </footer>
   </div>
   <script>
     $('.logout').on('click', function() {
