--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,23 +1,32 @@
 <style>
-  .content {
-    display: flex;
-  }
-  textarea {
-    width: 100%;
-    height: 40px;
-    border: none; /* 테두리 제거 */
-    background-color: #f0f0f0; /* 배경색 설정 */
-    border-bottom: 1px solid #bcbdbe; /* 검은색 밑줄 */
-    outline: none; /* 포커스 시 테두리 없애기 */
-    resize: none; /* 크기 조정 불가 */
-    overflow-y: hidden; /* 세로 스크롤을 숨김 */
-  }
-  textarea:hover {
-    border-bottom: 1px solid black;
-  }
   .dropdown {
     float: right;
   }
+
+  .dropdown > .dropdown-menu > .dropdown-item {
+    max-width: 600px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+  }
+
+  .main > .subject {
+    background-color:white;
+    padding:15px;
+    width:100%;
+    margin-bottom:10px;
+    font-weight:bold;
+  }
+
+  .main > .info {
+    padding:10px; min-height:50px;
+  }
+
+  .main > .content {
+    background-color:white;
+    padding:15px;
+    width:100%;
+    margin-bottom:10px;
+    white-space: pre-line;
+  }
+
   .comments_total {
     color: rgb(103, 103, 103);
     font-size: 20px;
@@ -27,66 +36,112 @@
     padding: 8px 0px 8px 0px;
     margin-bottom: 25px;
   }
+
+  .comments {
+    margin-bottom:20px;
+  }
+
+  .comments > .comment {
+    margin-top:10px;
+  }
+
+  .comments > .comment > .info {
+    margin-top:10px;
+  }
+
+  .comments > .comment > .info > span:nth-child(1) {
+    padding-right:10px;
+  }
+
+  .comments > .comment > .info > span:nth-child(2) {
+    padding:0 10px 0 10px;
+  }
+
+  .comments > .comment > .info > .btn {
+    --bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;
+  }
+  
+  .comments > .comment > .content {
+    white-space: pre-line;
+    min-height:40px;
+    display: flex;
+  }
+
+  .content textarea {
+    width: 100%;
+    height: 40px;
+    border: none;
+    background-color: #f0f0f0;
+    border-bottom: 1px solid #bcbdbe;
+    outline: none;
+    resize: none;
+    overflow-y: hidden;
+  }
+
+  .content textarea:hover {
+    border-bottom: 1px solid black;
+  }
 </style>
-<h3 style="background-color:white; padding:15px; width:100%; margin-bottom:10px; font-weight:bold;"><%= data[0].subject %></h3>
-<div style="padding:10px; min-height:50px;">
-  <b>작성자:</b> <%= data[0].username %> | <b>작성일자:</b> <%= data[0].created_at.toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22); %>
-  <%- data[0].updated_at ? '<b>(수정됨)</b>':'' %>
-  <% if (data[0].upload && data[0].upload.length > 0) { %>
-  <div class="dropdown">
-    <button class="btn btn-sm btn-secondary dropdown-toggle file" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      <i class="fa fa-paperclip" aria-hidden="true"></i> 첨부파일
-    </button>
-    <ul class="dropdown-menu">
-      <% let uploads = data[0].upload; %>
-      <% uploads.forEach(item => { %>
-        <li><a class="dropdown-item" href="<%= `/downloads/${item}` %>" style="max-width: 600px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
-          <%= item %>
-        </a>
-        </li>
-      <% }) %>
-    </ul>
+<div class="main">
+  <h3 class="subject"><%= data[0].subject %></h3>
+  <div class="info">
+    <b>작성자:</b> <%= data[0].username %> | <b>작성일자:</b> <%= data[0].created_at.toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22); %>
+    <%- data[0].updated_at ? '<b>(수정됨)</b>':'' %>
+    <% if (data[0].upload && data[0].upload.length > 0) { %>
+    <div class="dropdown">
+      <button class="btn btn-sm btn-secondary dropdown-toggle file" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="fa fa-paperclip" aria-hidden="true"></i> 첨부파일
+      </button>
+      <ul class="dropdown-menu">
+        <% let uploads = data[0].upload; %>
+        <% uploads.forEach(item => { %>
+        <li><a class="dropdown-item" href="<%= `/downloads/${item}` %>"> <%= item %></a></li>
+        <% }) %>
+      </ul>
+    </div>
+    <% } %>
+  </div>
+  <div class="main content"><%= data[0].content %></div>
+  <br>
+  <button class="btn btn-light <%= authStatus.userId?'like':'' %> <%= active?'active':'' %>"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> <span><%= like.length %></span> 좋아요</button>
+  <% if (data[0].user_id==authStatus.userId) { %>
+  <div class="float-end">
+    <a href="/boards/<%= id %>/edit">
+      <button type="button" class="btn btn-dark edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> 수정</button>
+    </a>
+    <a>
+      <button class="btn btn-dark delete"><i class="fa fa-trash-o" aria-hidden="true"></i> 삭제</button>
+    </a>
   </div>
   <% } %>
 </div>
-<div style="background-color:white; padding:15px; width:100%; margin-bottom:10px; white-space: pre-line;"><%= data[0].content %></div>
-<br>
-<button class="btn btn-light <%= authStatus.userId?'like':'' %> <%= active?'active':'' %>"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> <span><%= like.length %></span> 좋아요</button>
-<% if (data[0].user_id==authStatus.userId) { %>
-<div class="float-end">
-  <a href="/boards/<%= id %>/edit">
-    <button type="button" class="btn btn-dark edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> 수정</button>
-  </a>
-  <a>
-    <button class="btn btn-dark delete"><i class="fa fa-trash-o" aria-hidden="true"></i> 삭제</button>
-  </a>
-</div>
-<% } %>
 <br><br>
 <div class="comments_total">
   <i class="fa fa-commenting-o" aria-hidden="true"></i> 
   댓글 <span class="total"><%= comment?.[0]?.total || 0 %></span>개
 </div>
-<div class="comments" style="margin-bottom:30px;">
+<div class="comments">
 <% comment.forEach(item => { %>
-  <div class="comment" id="<%= item.id %>" style="margin-top:10px;">
-    <div class="info" style="margin-top:10px;">
-      <span user_id="<%= item.user_id %>" style="padding-right:10px;"><b><%= item.username %></b></span>|
-      <span style="padding:0 10px 0 10px;"><%= item.created_at.toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22);  %></span>
+  <div class="comment" id="<%= item.id %>">
+    <div class="info">
+      <span user_id="<%= item.user_id %>"><b><%= item.username %></b></span>|
+      <span>
+        <%= item.created_at.toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22);  %>
+      </span>
       <% if (authStatus.username==item.username) {%>
-      <button type="button" class="btn btn-info editComment" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">수정</button>
+        <button type="button" class="btn btn-dark editComment">수정</button>
       <% } %>
       <% if (authStatus.username==item.username) {%>
-      <button type="button" class="btn btn-danger deleteComment" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">삭제</button>
+        <button type="button" class="btn btn-danger deleteComment">삭제</button>
       <% } %>
     </div>
-    <div class="content" style="white-space: pre-line; min-height:40px;"><%= item.content %></div>
+    <div class="content viewComment"><%= item.content %></div>
   </div>
 <% }); %>
 </div>
 <% if (authStatus) { %>
-<div class="writeComment" style="margin-top:10px; height:300px;">
-  <textarea class="content" placeholder="댓글을 입력하세요"></textarea><br>
+<div class="content writeComment">
+  <textarea placeholder="댓글을 입력하세요"></textarea><br>
   <button class="btn btn-sm btn-primary saveComment">저장</button>
 </div>
 <% } else { %> 
@@ -96,6 +151,17 @@
   <% let uploads = data[0].upload || ''; %>
   let deleteFile = <%- JSON.stringify(uploads) %>;
   deleteFile = deleteFile.length > 0 ? deleteFile: ''; //빈 배열로 처리되면 오류나서 이렇게 처리함.
+
+  $(document).ready(function() {
+    $(".__body__").on("input", "textarea", function() {
+      if ($(this).val().indexOf("\n") === -1) {
+        $(this).height(35);
+      } else {
+        $(this).height('auto');
+        $(this).height(this.scrollHeight);
+      }
+    });
+  });
 
   $(".btn.delete").click( function(){
     if (confirm("정말 삭제하시겠습니까?")) {
@@ -155,19 +221,8 @@
     });
   });
 
-  $(document).ready(function() {
-    $(".__body__").on("input", "textarea", function() {
-      if ($(this).val().indexOf("\n") === -1) {
-        $(this).height(35);
-      } else {
-        $(this).height('auto');
-        $(this).height(this.scrollHeight);
-      }
-    });
-  });
-
   $(".btn.saveComment").click( function(){
-    let content = $(".writeComment .content").val()
+    let content = $(".writeComment > textarea").val()
     $.ajax({
       url: '/comments',
       method: 'POST',
@@ -180,19 +235,19 @@
         console.log(response)
         // 새로운 댓글을 즉시 추가
         let newComment = `
-        <div class="comment" id="${response.comment.id}" style="margin-top:10px;">
-          <div class="info" style="margin-top:10px;">
-            <span user_id="${response.comment.user_id}" style="padding-right:10px;"><b>${response.comment.username}</b></span>|
-            <span style="padding:0 10px 0 10px;">${new Date(response.comment.created_at).toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22)}</span>
-            <button type="button" class="btn btn-info editComment" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">수정</button>
-            <button type="button" class="btn btn-danger deleteComment" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">삭제</button>
+        <div class="comment" id="${response.comment.id}">
+          <div class="info">
+            <span user_id="${response.comment.user_id}"><b>${response.comment.username}</b></span>|
+            <span>${new Date(response.comment.created_at).toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22)}</span>
+            <button type="button" class="btn btn-dark editComment">수정</button>
+            <button type="button" class="btn btn-danger deleteComment">삭제</button>
           </div>
-          <div class="content" style="white-space: pre-line; min-height:40px;">${response.comment.content}</div>
+          <div class="content">${response.comment.content}</div>
         </div>`;
 
         $(".comments").append(newComment);
-        $(".writeComment .content").val("");
-        $(".writeComment .content").height(35);
+        $(".writeComment > textarea").val("");
+        $(".writeComment > textarea").height(35);
         $(".comments_total > span").text( parseInt($(".comments_total > span").text()) + 1 );
       },
       error: function(xhr, status, error) {
@@ -207,7 +262,7 @@
     commentElement.children(".info").children(".editComment").text("저장");
     commentElement.children(".info").children(".editComment").attr("class","btn btn-primary resaveComment");
     commentElement.children(".content").html(`
-      <textarea class="editContent" placeholder="댓글을 입력하세요">${commentElement.children(".content").text()}</textarea>
+      <textarea placeholder="댓글을 입력하세요">${commentElement.children(".content").text()}</textarea>
     `);
     $("textarea").trigger("input");
   });
@@ -217,7 +272,7 @@
     const id = commentElement.attr("id");
     const content = commentElement.children(".content").children("textarea").val();
     commentElement.children(".info").children(".resaveComment").text("수정");
-    commentElement.children(".info").children(".resaveComment").attr("class","btn btn-info editComment");
+    commentElement.children(".info").children(".resaveComment").attr("class","btn btn-dark editComment");
     commentElement.children(".content").text(content);
     
     $.ajax({
