--- a/views/title.ejs
+++ b/views/title.ejs
@@ -10,66 +10,68 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>EX community</title>
   <style>
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    font-family: 'Roboto', sans-serif;
-  }
+    @import url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans/css/SpoqaHanSansNeo.css');
 
-  .__body__ { 
-    flex: 1;
-    padding: 100px 400px 40px 400px;
-    /* height:100%; */
-    background-color:#f0f0f0;
-    overflow: auto;
-  }
-  
-  /* 작은 태블릿 및 모바일 (최대 768px) */
-  @media (max-width: 768px) {
-    .__body__ {
-      padding: 80px 20px; /* 작은 화면에서 패딩 조정 */
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     }
-  }
 
-  /* 중간 크기 태블릿 (768px ~ 1024px) */
-  @media (min-width: 769px) and (max-width: 1024px) {
-    .__body__ {
-      padding: 100px 40px; /* 중간 크기 화면에서 패딩 변경 */
+    .__body__ { 
+      flex: 1;
+      padding: 100px 400px 40px 400px;
+      /* height:100%; */
+      background-color:#f0f0f0;
+      overflow: auto;
     }
-  }
+    
+    /* 작은 태블릿 및 모바일 (최대 768px) */
+    @media (max-width: 768px) {
+      .__body__ {
+        padding: 80px 20px; /* 작은 화면에서 패딩 조정 */
+      }
+    }
 
-  .footer {
-    background: #333;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-  }
+    /* 중간 크기 태블릿 (768px ~ 1024px) */
+    @media (min-width: 769px) and (max-width: 1024px) {
+      .__body__ {
+        padding: 100px 40px; /* 중간 크기 화면에서 패딩 변경 */
+      }
+    }
 
-  .footer .copyright {
-    margin-top: 10px;
-    font-size: 14px;
-    opacity: 0.7;
-  }
-
-  @media (max-width: 600px) {
     .footer {
-      padding: 15px 0;
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
     }
-  }
 
-  .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-  }
+    .footer .copyright {
+      margin-top: 10px;
+      font-size: 14px;
+      opacity: 0.7;
+    }
 
-  .none {
-    display:none;
-  }
+    @media (max-width: 600px) {
+      .footer {
+        padding: 15px 0;
+      }
+    }
+
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .none {
+      display:none;
+    }
   </style>
 </head>
 <body>
